substrate/frame/support/test/tests/derive_no_bound_ui/default_too_many_attributes.stderr
error: multiple declared defaults
  --> tests/derive_no_bound_ui/default_too_many_attributes.rs:22:10
   |
22 | #[derive(frame_support::DefaultNoBound)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `frame_support::DefaultNoBound` (in Nightly builds, run with -Z macro-backtrace for more info)

error: first default
  --> tests/derive_no_bound_ui/default_too_many_attributes.rs:24:2
   |
24 | /     #[default]
25 | |     Bar(T::C),
   | |_____________^

error: additional default
  --> tests/derive_no_bound_ui/default_too_many_attributes.rs:26:2
   |
26 | /     #[default]
27 | |     Baz,
   | |_______^
